--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ features                                  :
     fontawesome_icon_name                 : pen
 
   - title                                 : Drak/light mode
-    description                           : Drak and light mode support for best possible contrast even in an suny environment.
+    description                           : Drak and light mode support for best possible contrast even in a sunny environment.
     fontawesome_icon_name                 : sun
 
   - title                                 : Easy to use
